--- a/public/styles.css
+++ b/public/styles.css
@@ -4,6 +4,10 @@ body {
   font-size: 14px;
 }
 
+.centered {
+  text-align: center;
+}
+
 header {
   margin-bottom: 80px;
 }
@@ -77,10 +81,15 @@ th {
 
 td {
   border-top: 1px solid #F0F0F0;
+  line-height: 1.4;
 }
 
 td.name {
-  font-size: 16px;
+  /*font-size: 16px;*/
+}
+
+td.description {
+  max-width: 400px;
 }
 
 td.faint {
