--- a/public/styles.css
+++ b/public/styles.css
@@ -20,6 +20,12 @@ header nav {
   float: right;
 }
 
+@media all and (max-width:640px) {
+  header nav {
+    display: none;
+  }
+}
+
 header nav ol {
   list-style: none;
   margin: 0;
@@ -42,14 +48,14 @@ hgroup h1, hgroup h2 {
   line-height: 32px;
 }
 
-h1 {
+hgroup h1 {
   font-size: 36px;
   font-weight: bold;
+  padding-right: 5px;
 }
 
 hgroup h2 {
   color: #CCC;
-  padding-left: 5px;
   font-weight: 300;
   font-size: 18px;
 }
@@ -72,6 +78,13 @@ tr:hover {
 th, td {
   text-align: left;
   padding: 8px 5px;
+}
+
+@media all and (max-width:640px) {
+  th.expendable, td.expendable {
+    display: none;
+    background: green;
+  }
 }
 
 th {
